dark mode fix

--- a/src/PostFeed/Comment/Comment.css
+++ b/src/PostFeed/Comment/Comment.css
@@ -12,7 +12,7 @@
     border-color: transparent;
     border-radius: 25px;
     width: 80%;
-    border-color: whitesmoke;
+    border-color: black;
     border-style: ridge;
     
 }
