--- a/src/PostFeed/Post/Post.css
+++ b/src/PostFeed/Post/Post.css
@@ -7,6 +7,7 @@
 .Post {
     margin-bottom: 50px;
     margin-top: 25px;
+    color: black;
 }
 
 
@@ -21,6 +22,7 @@
     font-size: medium;
     padding: 0;
     margin: 0;
+    color: black;
 }
 
 .btn-outline-success {
@@ -31,6 +33,7 @@
     border-style: none;
     padding: 0%;
     background-color: transparent;
+    color: black;
 }
 
 #addCommentModal {
@@ -40,14 +43,19 @@
 
 
 
+
+
+
+
 #postCard {
     margin-top: 5%;
     padding: 2%;
     padding-bottom: 0px;
-    border-color: transparent;
     border-radius: 15px;
-    border-color: lightgray;
-    border-style: ridge;
+    border-color: black;
+    border-style:ridge;
+    color: black;
+    
     
 }
 
